force-app/main/default/objects/Comments__c/Comments__c.object-meta.xml
<CustomObject>
    <label>Comments</label>
    <nameField>
        <label>Comments</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>