force-app/main/default/objects/Comments__c/fields/Commented_by__c.field-meta.xml
<CustomField>
    <fullName>Commented_by__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.MiddleName + &apos; &apos; +CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commented by</label>
    <type>Text</type>
</CustomField>