force-app/main/default/objects/Comments__c/fields/Commented_Date__c.field-meta.xml
<CustomField>
    <fullName>Commented_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commented Date</label>
    <type>DateTime</type>
</CustomField>